welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:6: error: type mismatch;
 found   : Unit
 required: Boolean
				rep = true 
                                    ^answerCell:5: error: type mismatch;
 found   : Unit
 required: Boolean
			if (isMom) {
                        ^answerCell:4: error: type mismatch;
 found   : Unit
 required: Boolean
		if (isMorning) {
                ^answerCell:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if (!(isAsleep)) {
        ^